fix buttons and image spacing jumping robot

--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -1,38 +1,46 @@
-.survey {
-    max-width: 400px;
-    border-style: solid;
-    margin: auto;
-    padding: 20px;
-}
-
-.error {
-    color: darkred;
-}
-
-.btn {
-    all: unset;
-    padding: 8px 20px;
-    margin-right: 15px;
-    background-color: lightgrey;
-    color: white;
-    border: none;
-    font-size: 16px;
-    font-family: 'Work Sans', sans-serif;
-    font-weight: 400;
-}
-
-@media (prefers-color-scheme: dark) {
     .survey {
-        border-color: #717171;
+        max-width: 400px;
+        border-style: solid;
+        margin: auto;
+        padding: 20px;
     }
-    input,
-    textarea {
-        background-color: lightgrey;
+    
+    .error {
+        color: darkred;
     }
-    input {
-        color: black;
-    }
+    
     .btn {
-        color: black;
+        all: unset;
+        padding: 8px 20px;
+        margin-right: 15px;
+        background-color: lightgrey;
+        color: white;
+        border: none;
+        font-size: 16px;
+        font-family: 'Work Sans', sans-serif;
+        font-weight: 400;
     }
-}
+    /* For SmartPhones---------------------------------------------------------------------------------------------- */
+    
+    @media only screen and (max-width: 500px) {
+        .btn {
+            padding: 4px 10px;
+            font-size: 12px;
+        }
+    }
+    
+    @media (prefers-color-scheme: dark) {
+        .survey {
+            border-color: #717171;
+        }
+        input,
+        textarea {
+            background-color: lightgrey;
+        }
+        input {
+            color: black;
+        }
+        .btn {
+            color: black;
+        }
+    }
